--- a/Lab 2/index.html
+++ b/Lab 2/index.html
@@ -13,12 +13,12 @@
 		<p>In order to even play VR you need the right equipment, this would be a VR headset the controllers that go with the system, and the motion trackers.</p>
 	<h4>Systems</h4>
 	<ul>
-		<li><a href="https://www.oculus.com/?utm_source=gg&utm_medium=a_ps&utm_campaign=10876932711&utm_term=oculus&utm_content=496017739373&utm_parent=all&utm_ad=105052990937&utm_location=9013301&utm_location2=&utm_placement=kwd-543294913&utm_adposition=&utm_device=c&utm_matchype=e&utm_feed=&" target="blank">Oculus</a></li>
-		<img src="images/Oculus.jpg" alt="Oculus Rift S" width="400" height="400">
-		<li><a href="https://www.vive.com/us/" target="blank">Vive</a></li>
-		<img src="images/Vive.jpg" alt="HTC Vive" width="400" height="200">
-		<li><a href="https://store.steampowered.com/valveindex" target="blank">Index</a></li>
-		<img src="images/valves-index.jpg" alt="Valve Index" width="450" height="300">
+		<li><a href="https://www.oculus.com/?utm_source=gg&utm_medium=a_ps&utm_campaign=10876932711&utm_term=oculus&utm_content=496017739373&utm_parent=all&utm_ad=105052990937&utm_location=9013301&utm_location2=&utm_placement=kwd-543294913&utm_adposition=&utm_device=c&utm_matchype=e&utm_feed=&" target="blank">Oculus (Left)</a></li>
+		<li><a href="https://www.vive.com/us/" target="blank">Vive (Center)</a></li>
+		<li><a href="https://store.steampowered.com/valveindex" target="blank">Index (Right)</a></li>
 	</ul>
+	<img src="images/Oculus.jpg" alt="Oculus Rift S" width="400" height="400">
+	<img src="images/Vive.jpg" alt="HTC Vive" width="400" height="200">
+	<img src="images/valves-index.jpg" alt="Valve Index" width="450" height="300">
 </body>
 </html>
