--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -4,15 +4,37 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <h1></h1>
+        <title>World of VR</title>
+        <style>
+            img {
+                max-width: 100%;
+            }
+        </style>
     </head>
 
     <body>
-        <h2></h2>
-        <h3></h3>
-        <h4></h4>
-        <p></p>
-        <p></p>
+        <header>
+            <h1>World of VR</h1>
+        </header>
+        
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="equip.html">Equipment</a>
+        </nav>
+        <h2>Intro into VR</h2>
+            <p>VR can be expensive but it opens a new world to you. You can do things, go places, and experence things you never could in your daily life.</p>
+            <p>There are three systems I would recommend and there are as follows:</p>
+            <ul>
+                <li><a href="https://www.oculus.com/?utm_source=gg&utm_medium=a_ps&utm_campaign=10876932711&utm_term=oculus&utm_content=496017739373&utm_parent=all&utm_ad=105052990937&utm_location=9013301&utm_location2=&utm_placement=kwd-543294913&utm_adposition=&utm_device=c&utm_matchype=e&utm_feed=&" target="blank">Oculus Rift</a></li>
+                <li><a href="https://www.vive.com/us/" target="blank">HTC Vive</a></li>
+                <li><a href="https://store.steampowered.com/valveindex" target="blank">Valve Index</a></li>
+            </ul>
+        <h3>Expectations</h3>
+            <p>People expect to jump right into the deep end of the pool and enjoy the world of Ready Player One, we are sadly not there yet. There is still a difference between the worlds, but in time you will adjust and start to feel at home in VR.</p>
+        <h4>Screenshots</h4>
+        <img src="images/vr-workspace.jpeg" alt="VR workspace project">
+        <img src="images/VR-globe-in-hand.jpeg" alt="VR holding globe">
     </body>
+
+    <footer>&copy; 2021 Lab 2 Demo</footer>
 </html>
