--- a/Lab2/Index.html
+++ b/Lab2/Index.html
@@ -15,7 +15,7 @@
 	<ul>
 		<li><a href="https://www.oculus.com/?utm_source=gg&utm_medium=a_ps&utm_campaign=10876932711&utm_term=oculus&utm_content=496017739373&utm_parent=all&utm_ad=105052990937&utm_location=9013301&utm_location2=&utm_placement=kwd-543294913&utm_adposition=&utm_device=c&utm_matchype=e&utm_feed=&" target="blank">Oculus</a><br><br><img src="images/Oculus.jpg" alt="Oculus Rift S" width="400" height="400"></li>
 		<li><a href="https://www.vive.com/us/" target="blank">Vive</a><br><br><img src="images/Vive.jpg" alt="HTC Vive" width="400" height="200"></li>
-		<li><a href="https://store.steampowered.com/valveindex" target="blank">Index<br><br><img src="images/valves-index.jpg" alt="Valve Index" width="450" height="300"></a></li>
+		<li><a href="https://store.steampowered.com/valveindex" target="blank">Index</a><br><br><img src="images/valves-index.jpg" alt="Valve Index" width="450" height="300"></li>
 	</ul>
 </body>
 </html>
