--- a/Lab3/equip.html
+++ b/Lab3/equip.html
@@ -17,8 +17,8 @@
         </header>
 
         <nav>
-            <a href="index.html">Home</a>
-            <a href="equip.html">Equipment</a>
+            <a href="Index.html">Home</a>
+            <a href="Equip.html">Equipment</a>
         </nav>
         <h2>Prices</h2>
         <p>Depending on which system your going for you are looking at anywhere from roughly $300 to a few thousand dollars.</p>
