--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -17,8 +17,8 @@
         </header>
         
         <nav>
-            <a href="index.html">Home</a>
-            <a href="equip.html">Equipment</a>
+            <a href="Index.html">Home</a>
+            <a href="Equip.html">Equipment</a>
         </nav>
         <h2>Intro into VR</h2>
             <p>VR can be expensive but it opens a new world to you. You can do things, go places, and experence things you never could in your daily life.</p>
