--- a/Lab 3/Index.html
+++ b/Lab 3/Index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-	    <meta charset="UTF-8">
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>World of VR</title>
-        <style>
-            img {
-                max-width: 100%;
-            }
-        </style>
-    </head>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Lab 3</title>
+    <style>
+        img {
+            max-width: 100%;
+        }
+    </style>
+</head>
 
     <body>
         <header>
