--- a/Lab 3/Equip.html
+++ b/Lab 3/Equip.html
@@ -29,5 +29,7 @@
         <img src="images/oculus-quest-1.jpg" alt="VR light">
     </body>
 
-    <footer>&copy; 2021 Lab 2 Demo</footer>
+    <footer>
+        <p>&copy; 2021 Lab 2 Demo</p>
+    </footer>
 </html>
