--- a/Lab 3/Index.html
+++ b/Lab 3/Index.html
@@ -35,5 +35,7 @@
         <img src="images/VR-globe-in-hand.jpeg" alt="VR holding globe">
     </body>
 
-    <footer>&copy; 2021 Lab 2 Demo</footer>
+    <footer>
+        <p>&copy; 2021 Lab 2 Demo</p>
+    </footer>
 </html>
