--- a/Lab 3/Equip.html
+++ b/Lab 3/Equip.html
@@ -19,6 +19,8 @@
             <a href="Index.html">Home</a>
             <a href="Equip.html">Equipment</a>
         </nav>
+
+    <main>
         <h2>Prices</h2>
         <p>Depending on which system your going for you are looking at anywhere from roughly $300 to a few thousand dollars.</p>
         <h3>Equipment</h3>
@@ -26,9 +28,11 @@
         <h4>Screenshots</h4>
         <img src="images/big-3.jpg" alt="The big 3">
         <img src="images/oculus-quest-1.jpg" alt="VR light">
-    </body>
-
+    </main>
+    
     <footer>
         <p>&copy; 2021 Lab 2 Demo</p>
     </footer>
+
+    </body>  
 </html>
