--- a/Lab 3/Index.html
+++ b/Lab 3/Index.html
@@ -19,6 +19,8 @@
             <a href="Index.html">Home</a>
             <a href="Equip.html">Equipment</a>
         </nav>
+
+    <main>
         <h2>Intro into VR</h2>
             <p>VR can be expensive but it opens a new world to you. You can do things, go places, and experence things you never could in your daily life.</p>
             <p>There are three systems I would recommend and there are as follows:</p>
@@ -32,9 +34,11 @@
         <h4>Screenshots</h4>
         <img src="images/vr-workspace.jpeg" alt="VR workspace project">
         <img src="images/VR-globe-in-hand.jpeg" alt="VR holding globe">
-    </body>
-
+    </main>
+    
     <footer>
         <p>&copy; 2021 Lab 2 Demo</p>
     </footer>
+
+    </body>  
 </html>
