--- a/Lab 3/Equip.html
+++ b/Lab 3/Equip.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Lab 3</title>
-        <meta charset="utf-8">
+	    <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <title>Lab 3</title>
         <style>
             img {
                 max-width: 100%;
