--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -17,8 +17,8 @@
         </header>
         
         <nav>
-            <a href="Index.html">Home</a>
-            <a href="Equip.html">Equipment</a>
+            <a href="index.html">Home</a>
+            <a href="equip.html">Equipment</a>
         </nav>
 
     <main>
