--- a/Lab4/Equip.html
+++ b/Lab4/Equip.html
@@ -14,10 +14,10 @@
                 <h1>VR Equipment</h1>
             </header>
 
-          <nav>
-                <a href="Index.html">Home</a>
-                <a href="Equip.html">Equipment</a>
-          </nav>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="equip.html">Equipment</a>
+            </nav>
 
             <main>
                 <h2>Prices</h2>
