--- a/Lab4/Index.html
+++ b/Lab4/Index.html
@@ -15,8 +15,8 @@
             </header>
         
             <nav>
-                <a href="Index.html">Home</a>
-                <a href="Equip.html">Equipment</a>
+                <a href="index.html">Home</a>
+                <a href="equip.html">Equipment</a>
             </nav>
 
             <main>
