--- a/Lab4/Index.html
+++ b/Lab4/Index.html
@@ -15,7 +15,7 @@
             </header>
         
             <nav>
-                <a href="index.html">Home</a>
+                <a href="Index.html">Home</a>
                 <a href="equip.html">Equipment</a>
             </nav>
 
