--- a/Lab4/equip.html
+++ b/Lab4/equip.html
@@ -3,7 +3,7 @@
     <head>
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Lab 3</title>
+	    <title>Lab 4</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -30,7 +30,7 @@
             </main>
     
             <footer>
-                <p>&copy; 2021 Lab 2 Demo</p>
+                <p>&copy; 2021 Lab 4</p>
         </footer>
         </div>
     </body>  
