--- a/Lab3/equip.html
+++ b/Lab3/equip.html
@@ -32,7 +32,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2021 Lab 2 Demo</p>
+        <p>&copy; 2021 Lab 3</p>
     </footer>
 
     </body>  
