--- a/Lab3/index.html
+++ b/Lab3/index.html
@@ -38,7 +38,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2021 Lab 2 Demo</p>
+        <p>&copy; 2021 Lab 3</p>
     </footer>
 
     </body>  
