--- a/mid_term/equip.html
+++ b/mid_term/equip.html
@@ -16,7 +16,7 @@
             </header>
 
             <nav>
-                <a href="index.html">Home</a>
+                <a href="Index.html">Home</a>
                 <a href="equip.html">Equipment</a>
                 <a href="screenshots.html">Screenshots</a>
                 <a href="dangers.html">Dangers</a>
