--- a/lab6/index.html
+++ b/lab6/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Lab 5</title>
+	    <title>Lab 6</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -17,10 +17,10 @@
         
             <nav>
                 <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Gallery</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="danger.html">Dangers</a></li>
                 </ul>
             </nav>
 
@@ -28,8 +28,9 @@
                 <section>
                     <h2>Getting Started!</h2>
                     <p>There are a few basic's to go over before we can even begin with the VR itself. First and formost is what type are you looking for? There are VR set's for PC, Playstaion, some that work with your phone, and even mobile VR headsets. If you are going for a PC headset than you need to make sure your PC can even run it! For the most part most porviders offer a few software to test your PC to make sure it can run them. As for the other VR's they are designed to run with the system they are for, such as the Playstaion VR for example.</p>
-                    <p>Once you have the first part done now comes the part were we make sure you have the room to use the device! That's right you need room to play it! Since you will be moving around you don't wanna fit anything! The space required from system to system varies, but to be on the safe side I suggest atleast a 7ft x 7ft area if not more. This will make sure you have the room needed to make sure you will not hit anything. Trust me, you might think this is over kill an you won't move around that much, but you will.</p>
-                    <img src="images/VR_Types.png" alt="VR Types">
+                    <p>Once you have the first part done now comes the part were we make sure you have the room to use the device! That's right you need room to play it! Since you will be moving around you don't wanna hit anything! The space required from system to system varies, but to be on the safe side I suggest atleast a 7ft x 7ft area if not more. This will make sure you have the room needed to make sure you will not hit anything. Trust me, you might think this is over kill an you won't move around that much, but you will.</p>
+                    <img class="tab_mobile"src="images/VR_Types.png" alt="VR Types">
+                    <img class="desktop" src="images/VR_Types_2.jpg" alt="VR Types">
                 </section>
                 <aside>
                     <p>Below are a few examples of the different types of VR. These Are just a few examples, as such this is not every VR system. If you do not like any of these are are more to choose from.</p>
@@ -42,7 +43,7 @@
             </main>
     
             <footer>
-                <p>&copy; 2021 Lab 5</p>
+                <p>&copy; 2021 Lab 6</p>
             </footer>
         </div>
     </body>  
