--- a/lab6/gallery.html
+++ b/lab6/gallery.html
@@ -35,7 +35,7 @@
                     <img src="images/Playstation.png" alt="Playstaion VR">
                     <img src="images/Index.jpg" alt="Index">
                     <img src="images/HTC.jpg" alt="HTC Vive">
-                    <img src="images/Google VR.jpg" alt="Google VR">
+                    <img src="images/Google_VR.jpg" alt="Google VR">
                     <img src="images/Gear_VR.jpg" alt="Gear VR">
                 </section>
             </main>
