--- a/lab7/index.html
+++ b/lab7/index.html
@@ -111,17 +111,17 @@
 
             <h3>Videos</h3>
             <video controls>
-                <source src="video/NYPD using VR.mp4" type="Video/mp4">
+                <source src="video/NYPD_using_VR.mp4" type="Video/mp4">
             </video>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/p4vO64Y27JE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="800" height="500" src="https://www.youtube.com/embed/p4vO64Y27JE" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <h3>Audio</h3>
             <audio controls>
-                <source src="video/Mudang Rouge - Crimson Dawn.mp3" type="audio/mp3">
+                <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
             </audio>
 
-            <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/199515702&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ultrarecords" title="Ultra Music" target="_blank" style="color: #cccccc; text-decoration: none;">Ultra Music</a> · <a href="https://soundcloud.com/ultrarecords/alina-baraz-galimatias-fantasy-felix-jaehn-remix1" title="Alina Baraz &amp; Galimatias - Fantasy (Felix Jaehn Remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Alina Baraz &amp; Galimatias - Fantasy (Felix Jaehn Remix)</a></div>
+            <iframe width="400" height="300" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/199515702&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/ultrarecords" title="Ultra Music" target="_blank" style="color: #cccccc; text-decoration: none;">Ultra Music</a> · <a href="https://soundcloud.com/ultrarecords/alina-baraz-galimatias-fantasy-felix-jaehn-remix1" title="Alina Baraz &amp; Galimatias - Fantasy (Felix Jaehn Remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Alina Baraz &amp; Galimatias - Fantasy (Felix Jaehn Remix)</a></div>
 
         </main>
     
