--- a/final/gallery.html
+++ b/final/gallery.html
@@ -52,6 +52,9 @@
                     <div><img src="images/VR_E3.jpg" alt="VR at E3"></div>
                     <div><img src="images/VR_Types_3.jpg" alt="VR Types"></div>
                 </div>
+                <audio controls>
+                    <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
+                </audio>
             </main>
             <footer>&copy; 2021 Final</footer>
         </div>
