--- a/final/about.html
+++ b/final/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Lab 6</title>
+	    <title>Final</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
         <style>
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="hardwear.html">Hardwear</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
                     <li><a class="active" href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -40,7 +40,7 @@
             </main>
     
             <footer>
-                <p>&copy; 2021 Lab 6</p>
+                <p>&copy; 2021 Final</p>
             </footer>
         </div>
     </body>  
