--- a/final/contact.html
+++ b/final/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <title>Lab 6</title>
+	    <title>Final</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/styles.css">
         <style>
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="hardwear.html">Hardwear</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a class="active" href="contact.html">Contact</a></li>
                 </ul>
@@ -33,7 +33,7 @@
             <main>
                 <section>
                     <h2>Troubles with your equipment?</h2>
-                    <p>For more infirmation about a VR headset or soft wearplease contact the provider for said platform. They will beable to answer any questions you have or can provide you with detailed information to solve your problem in a timely manner.</p>
+                    <p>For more information about a VR headset or soft ware please contact the provider for said platform. They will be able to answer any questions you have or can provide you with detailed information to solve your problem in a timely manner.</p>
                     <p>Here are a few links to some of the more popular VR Support treads.</p>
                     <ul>
                         <li><a href="https://support.oculus.com/3036997806429220/" target="blank">Oculus Support</a></li>
@@ -45,7 +45,7 @@
             </main>
     
             <footer>
-                <p>&copy; 2021 Lab 6</p>
+                <p>&copy; 2021 Final</p>
             </footer>
         </div>
     </body>  
