--- a/final/gallery.html
+++ b/final/gallery.html
@@ -37,7 +37,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="gallery.html">Gallery</a></li>
-                    <li><a href="hardwear.html">Hardwear</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -52,7 +52,7 @@
                     <div><img src="images/VR_E3.jpg" alt="VR at E3"></div>
                     <div><img src="images/VR_Types_3.jpg" alt="VR Types"></div>
                 </div>
-                <audio controls>
+                <audio controls autoplay>
                     <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
                 </audio>
             </main>
