--- a/final/hardware.html
+++ b/final/hardware.html
@@ -38,7 +38,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a class="active" href="hardwear.html">Hardwear</a></li>
+                    <li><a class="active" href="hardware.html">Hardware</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -51,7 +51,7 @@
                             <tr>
                                 <th>Headset</th>
                                 <th>Price</th>
-                                <th>Require's additional hardwear</th>
+                                <th>Requires additional hardware</th>
                             </tr>
                             <tr>
                                 <td>Rift S</td>
@@ -65,7 +65,7 @@
                             </tr>
                             <tr>
                                 <td>Google VR</td>
-                                <td>Free softwear</td>
+                                <td>Free software</td>
                                 <td>Works using your phone</td>
                             </tr>
                             <tr>
@@ -77,7 +77,7 @@
                     </div>
                     <h3>Practical uses of VR</h3>
                     <div>
-                        <p>VR can be used for much more than just playing video games. It can be used in training aswell!</p>
+                        <p>VR can be used for much more than just playing video games. It can be used in training as well!</p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/NND7Hk5fYdI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/vOAOfn9bTDY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
