--- a/final/index.html
+++ b/final/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="hardwear.html">Hardwear</a></li>
+                    <li><a href="hardware.html">Hardware</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -26,13 +26,13 @@
             <main>
                 <section>
                     <h2>Introduction to the virtual world</h2>
-                    <p>There is alot to VR, but the first steps into the virtual world are quite simple. First thing first What type of VR are you going for? Yes there are quite a few to choose from just like a car dealership. Once you pick out your choosen VR we can move forward to the next step, setting up your "playspace." Let's go on the safe side and say about a 7ft by 7ft area. All the basic things are now done, from here we just plug in the VR and run the setup on the choosen platfrom. This could range from cellphone VR, Playstation VR, PC VR, and much more. Once setup is complete it is time to boot up the VR and dip our toe's into the virtual world! Take it slow at first there are some side effects to this new hardwear, but don't worry one day you can join the rest of us in the deep end of the pool you just need to adjust to useing the hardwear.</p> 
+                    <p>There is a lot to VR, but the first steps into the virtual world are quite simple. First thing first What type of VR are you going for? Yes there are quite a few to choose from just like a car dealership. Once you pick out your chosen VR we can move forward to the next step, setting up your "playspace." Let's go on the safe side and say about a 7ft by 7ft area. All the basic things are now done, from here we just plug in the VR and run the setup on the chosen platform . This could range from cellphone VR, Playstation VR, PC VR, and much more. Once setup is complete it is time to boot up the VR and dip our toes into the virtual world! Take it slow at first there are some side effects to this new hardware, but don't worry one day you can join the rest of us in the deep end of the pool you just need to adjust to using the hardware.</p> 
                     <img class="tab_mobile" src="images/VR_Types.png" alt="VR Types">
                     <img class="desktop" src="images/VR_Types_2.jpg" alt="VR Types">
                 </section>
                 <section>
                     <h2>Type's of VR</h2>
-                    <p>This is a short list of different types of VR and are not in any specific oreder.</p>
+                    <p>This is a short list of different types of VR and are not in any specific order.</p>
                     <ol>
                         <li><a href="https://www.playstation.com/en-us/ps-vr/" target="blank">Playstatin VR</a></li>
                         <li><a href="https://arvr.google.com/" target="blank">Google AR & VR</a></li>
