--- a/final/about.html
+++ b/final/about.html
@@ -37,6 +37,10 @@
                     <img src="images/VR_E3.jpg" alt="VR at E3">
                     <img src="images/Palmer_Luckey.jpg" alt="Palmer Luckey">
                 </section>
+
+                <audio autoplay>
+                    <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
+                </audio>
             </main>
     
             <footer>
