--- a/final/contact.html
+++ b/final/contact.html
@@ -42,6 +42,10 @@
                         <li><a href="https://www.playstation.com/en-us/support/hardware/psvr/" target="blank">Playstaion VR Support</a></li>
                     </ul>
                 </section>
+
+                <audio autoplay>
+                    <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
+                </audio>
             </main>
     
             <footer>
