--- a/final/gallery.html
+++ b/final/gallery.html
@@ -52,7 +52,8 @@
                     <div><img src="images/VR_E3.jpg" alt="VR at E3"></div>
                     <div><img src="images/VR_Types_3.jpg" alt="VR Types"></div>
                 </div>
-                <audio controls autoplay>
+                
+                <audio autoplay>
                     <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
                 </audio>
             </main>
