--- a/final/hardware.html
+++ b/final/hardware.html
@@ -82,6 +82,10 @@
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/vOAOfn9bTDY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
+
+                <audio autoplay>
+                    <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
+                </audio>
             </main>
             <footer>&copy; 2021 Final</footer>
         </div>
