--- a/final/index.html
+++ b/final/index.html
@@ -42,6 +42,10 @@
                         <li><a href="https://www.oculus.com/rift-s/" target="blank">Oculus Rift S</a></li>
                     </ol>
                 </section>
+
+                <audio autoplay>
+                    <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
+                </audio>
             </main>
             <footer>&copy; 2021 Final</footer>
         </div>
