--- a/final/gallery.html
+++ b/final/gallery.html
@@ -53,7 +53,7 @@
                     <div><img src="images/VR_Types_3.jpg" alt="VR Types"></div>
                 </div>
                 
-                <audio autoplay>
+                <audio controls autoplay>
                     <source src="video/Crimson_Dawn.mp3" type="audio/mp3">
                 </audio>
             </main>
