--- a/final/hardware.html
+++ b/final/hardware.html
@@ -69,7 +69,7 @@
                                 <td>Works using your phone</td>
                             </tr>
                             <tr>
-                                <td>Playstaion VR</td>
+                                <td>playstation VR</td>
                                 <td>Sold via bundles around $349.99</td>
                                 <td>Playstation</td>
                             </tr>
